# pytest-suggest

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  pytest-mycompletion.bash  setup.cfg  tox.ini
.github/workflows/: test.yml
pytest_suggest/: constants.py  suggest.py  trie.py
scripts/: pytest-mycompletion.bash  pytest-mycompletion.ps1
src/pytest_suggest/: constants.py  plugin.py  trie.py
src/pytest_suggest/cli/: suggest.py
src/pytest_suggest/scripts/: pytest-mycompletion.bash  pytest-mycompletion.ps1  pytest-mycompletion.sh
tests/: cli_test.py  plugin_test.py  trie_test.py
