[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
name = "pytest-suggest"
version = "0.0.0"
authors = [{ name = "Davide Canton", email = "davide.canton5@gmail.com" }]
description = "A pytest plugin to suggest test cases"
readme = "README.md"
dependencies = ["pytest>=8.0.0"]
optional-dependencies.dev = ["pytest-cov>=4.0.0", "build", "tox"]
requires-python = ">=3.8"

[project.scripts]
pytest-suggest = "pytest_suggest.cli.suggest:main"

[project.entry-points."pytest11"]
suggest = "pytest_suggest.plugin"

[tool.pytest.ini_options]
addopts = "--cov-report=html --cov-report=term --no-cov-on-fail -ra"

# code coverage configuration
# refer to https://coverage.readthedocs.io/en/latest/config.html
[tool.coverage.run]
branch = true

[tool.coverage.paths]
source = "."

[tool.coverage.report]
include = ["pytest_suggest/**"]

[tool.coverage.html]
directory = "coverage"
