[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
name = "pytest-suggest"
version = "0.0.0"
authors = [{ name = "Davide Canton", email = "davide.canton5@gmail.com" }]
description = "A pytest plugin to suggest test cases"
readme = "README.md"
dependencies = ["pytest>=7.0.0", "orjson>=3.10.7"]
optional-dependencies.dev = ["pytest-cov", "build", "tox", "ruff"]
requires-python = ">=3.8"

[project.scripts]
pytest-suggest = "pytest_suggest.cli.suggest:main"

[tool.setuptools.package-data]
"*" = ["*.bash", "*.ps1"]

[project.entry-points."pytest11"]
suggest = "pytest_suggest.plugin"

[tool.pytest.ini_options]
addopts = "--cov-report=html --cov-report=term --no-cov-on-fail -ra --import-mode=importlib"
pythonpath = ["src"]
markers = ["slow: mark test as slow"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.html]
directory = "coverage"
