[metadata]
name = pytest-suggest
version = 0.0.0
author = Davide Canton
author_email = davide.canton5@gmail.com

[options]
packages = find:
python_requires = >=3.8
# install_requires =

[options.packages.find]
include = pytest_suggest*

[options.extras_require]
dev =
    pytest>=8.0.0
    pytest-cov>=4.0.0

# code coverage configuration
# refer to https://coverage.readthedocs.io/en/latest/config.html
[coverage:run]
branch = true

[coverage:paths]
source = .

[coverage:report]
include =
    pytest_suggest/**

[coverage:html]
directory = coverage